logs/pyflann.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyflann'...
Listing './lib/python3.5/site-packages/pyflann/bindings'...
Compiling './lib/python3.5/site-packages/pyflann/bindings/flann_ctypes.py'...
***   File "./lib/python3.5/site-packages/pyflann/bindings/flann_ctypes.py", line 151
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyflann/io'...
Compiling './lib/python3.5/site-packages/pyflann/io/dataset.py'...
***   File "./lib/python3.5/site-packages/pyflann/io/dataset.py", line 61
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyflann/io/hdf5_dataset.py'...
***   File "./lib/python3.5/site-packages/pyflann/io/hdf5_dataset.py", line 34
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyflann/lib'...
Listing './lib/python3.5/site-packages/pyflann/lib/darwin'...
Listing './lib/python3.5/site-packages/pyflann/lib/linux'...
Listing './lib/python3.5/site-packages/pyflann/lib/win32'...
Listing './lib/python3.5/site-packages/pyflann/lib/win32/x64'...
Listing './lib/python3.5/site-packages/pyflann/lib/win32/x86'...
Listing './lib/python3.5/site-packages/pyflann/util'...
Compiling './lib/python3.5/site-packages/pyflann/util/weave_tools.py'...
***   File "./lib/python3.5/site-packages/pyflann/util/weave_tools.py", line 168
    print self.__translation_dict
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyflann-1.6.14.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
